--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+// colors
 $color-primary: #55c57a;
 $color-secondary: #008000;
 $color-tertiary: #006400;
@@ -8,3 +9,9 @@ $color-primary-dark: #28b485;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+
+// grid
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
+
