--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,23 @@ body {
     letter-spacing: .80rem;
     animation: moveInRight 1s ease-out; }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all .6s; }
+  .heading-secondary:hover {
+    transform: translate(0, -1rem);
+    -webkit-box-reflect: below -2rem -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.5, transparent), to(white)); }
+
+.u-center-text {
+  text-align: center; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -134,7 +151,7 @@ body {
   .row .col-2-of-4 {
     width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
   .row .col-3-of-4 {
-    width: calc(3 * ((100% - 3 * 6rem) / 4) + 2* 6rem); }
+    width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
 .header {
   height: 95vh;
@@ -142,7 +159,7 @@ body {
   background-size: cover;
   background-position: top;
   position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 60% 95%, 40% 95%, 0 100%); }
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 60vw 90vh, 40vw 90vh, 0 100%); }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -155,3 +172,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 15rem 0;
+  margin-top: -5vh; }
