--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -6,7 +6,9 @@ $color-tertiary: #006400;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
+$color-grey-light: #f7f7f7;
 $color-grey-dark: #777;
+
 $color-white: #fff;
 $color-black: #000;
 
