--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -31,3 +31,26 @@
         animation: moveInRight 1s ease-out;
     }
 }
+
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: .2rem;
+    transition: all .6s;
+
+    &:hover {
+        // transform: skewY(2deg) skewX(15deg) scale(1.1);
+        transform: translate(0, -1rem);
+        // -webkit-box-reflect: below -2rem linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.2));
+        -webkit-box-reflect: below -2rem
+        -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.5, transparent), to(white));
+        // text-shadow: .5rem 1rem 2rem rgba($color-black, .2);   
+    }
+}
+
+
