--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -8,7 +8,7 @@
     background-size: cover;
     background-position: top;
     position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 60% 95%, 40% 95%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 60vw 90vh, 40vw 90vh, 0 100%);
 
     &__logo-box {
         position: absolute;
