--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -8,7 +8,7 @@
     background-size: cover;
     background-position: top;
     position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 60vw 85vh, 40vw 85vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 60% 90%, 40% 90%, 0 100%);
     
     &__logo-box {
         position: absolute;
