--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -1,5 +1,21 @@
 .section-about {
     background-color: $color-grey-light;
-    padding: 15rem 0;
+    padding: 10rem 0 30rem 0;
     margin-top: -10vh;
+}
+
+.section-features {
+    padding: 20rem;
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.8),
+        rgba($color-primary-dark, 0.8)),
+        url(../image/feature-photo1.jpg);
+    background-size: cover;
+    transform: skewY(-7deg);
+    margin-top: -10rem;
+
+    & > * {
+        transform: skewY(7deg);
+    }
 }
