card structure and rotating animation done.

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -3,6 +3,12 @@ $color-primary: #55c57a;
 $color-secondary: #008000;
 $color-tertiary: #006400;
 
+$color-orange-light: #ffb900;
+$color-orange-dark: #ff7730;
+
+$color-blue-light: #2998ff;
+$color-blue-dark: #5643fa;
+
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
