stories section with person skew card review board done.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -11,13 +11,9 @@
 @import "components/card";
 @import "components/composition";
 @import "components/feature-box";
+@import "components/stories";
 
 @import "layout/grid";
 @import "layout/header";
 
 @import "pages/home";
-
-
-
-
-
