--- a/assets/sass/base/_utilities.scss
+++ b/assets/sass/base/_utilities.scss
@@ -5,4 +5,4 @@
 .u-margin-bottom-big { margin-bottom: 8rem; }
 
 .u-margin-top-big { margin-top: 8rem; }
-.u-margin-bottom-huge { margin-bottom: 10rem; }
+.u-margin-top-huge { margin-top: 10rem; }
