--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,6 +7,7 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/bg-video";
 @import "components/button";
 @import "components/card";
 @import "components/composition";
@@ -17,3 +18,4 @@
 @import "layout/header";
 
 @import "pages/home";
+
