--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -15,8 +15,10 @@
 @import "components/form";
 @import "components/stories";
 
+@import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
 
 @import "pages/home";
+
 
