--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/form";
+@import "components/popup";
 @import "components/stories";
 
 @import "layout/footer";
@@ -21,5 +22,3 @@
 @import "layout/navigation";
 
 @import "pages/home";
-
-
