--- a/assets/sass/components/_composition.scss
+++ b/assets/sass/components/_composition.scss
@@ -7,6 +7,8 @@
         // border-radius: 2px;
         position: absolute;
         z-index: 10;
+        border-radius: 3px;
+        overflow: hidden;
         transition: all .2s;
         outline-offset: 2rem;
 
@@ -27,6 +29,9 @@
 
             &:hover {
                 outline: 1.5rem solid $color-primary;
+                -webkit-border-radius: 0;
+                -moz-border-radius: 0;
+                border-radius: 0;
                 transform: scale(1.05) translateY(-0.5rem);
                 box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
                 z-index: 20;
