--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -12,3 +12,43 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+// Media query manager
+/*
+@mixin respond-phone {
+    @media (max-width: 600px) {
+    }
+}
+
+0 - 600 ------- phone
+600 - 900 ----- tablet portrait
+900 - 1200 ---- tablet landscape
+1200 - 1800 --- normal styles apply
+1800+ --------- big desktop
+
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+order = base + typography > general layout + grid > page layout > components
+
+1em = 16px 
+Whatever is user font size this way we can control their entire browser layout. no need to worry about breakout of layout.
+*/
+
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) { @content };      //600px
+    }
+    @if $breakpoint == tab-port {
+        @media (max-width: 56.25em) { @content };     //900px
+    }
+    @if $breakpoint == tab-land {
+        @media (max-width: 75em) { @content };        //1200px
+    }
+    @if $breakpoint == big-desktop {
+        @media (min-width: 112.5em) { @content };     //1800px
+    }
+}
