--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -7,7 +7,23 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 62.5%; //1rem = 10px, 10/16
+
+    @include respond(tab-land) { //width < 1200
+        font-size: 56.25%; //1rem = 9px, 9/16
+    }
+
+    @include respond(tab-port) { //width < 900
+        font-size: 50%; //1rem = 8px, 8/16
+    }
+
+    @include respond(phone) { //width < 600
+        font-size: 30%; //1rem = 4.8px, 4.8/16
+    }
+    
+    @include respond(big-desktop) { //width > 1800 
+        font-size: 75%; //1rem = 12px, 12/16
+    }
 }
 
 body {
@@ -16,6 +32,9 @@ body {
     line-height: 1.7;
     color: $color-grey-dark;
     padding: 3rem;
-
     box-sizing: border-box;
+
+    @include respond(tab-port) {
+        padding: 0;
+    }
 }
