--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -18,7 +18,11 @@
         animation-name: moveInLeft;
         animation-duration: 1s;
         animation-timing-function: ease-out;
-
+        
+        @include respond(phone) {
+            letter-spacing: 1.5rem;
+            font-size: 5rem;
+        }
         // animation-delay: 3s;
         // animation-iteration-count: 3;
     }
@@ -29,6 +33,10 @@
         font-weight: 700;
         letter-spacing: .80rem;
         animation: moveInRight 1s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -42,6 +50,14 @@
     color: transparent;
     letter-spacing: .2rem;
     transition: all .6s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
 
     &:hover {
         // transform: skewY(2deg) skewX(15deg) scale(1.1);
