--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -5,7 +5,7 @@
 }
 
 .section-features {
-    padding: 20rem;
+    padding: 20rem 0;
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8),
