--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,9 +148,15 @@ body {
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-medium {
+      margin-bottom: 3rem !important; } }
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 5rem !important; } }
 
 .u-margin-top-big {
   margin-top: 8rem !important; }
@@ -351,15 +357,36 @@ body {
     overflow: hidden;
     transition: all .2s;
     outline-offset: 2rem; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 33.33333%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
     .composition__photo--p1 {
       left: 0;
       top: -4rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p1 {
+          top: 0rem;
+          transform: scale(1.1); } }
     .composition__photo--p2 {
       left: 30%;
       top: 8rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p2 {
+          top: -1rem;
+          left: 0;
+          transform: scale(1.3);
+          z-index: 100; } }
     .composition__photo--p3 {
       left: 60%;
       top: 20rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p3 {
+          top: 1rem;
+          left: 0;
+          transform: scale(1.2); } }
     .composition__photo:hover {
       outline: 1.5rem solid #55c57a;
       -webkit-border-radius: 0;
@@ -367,7 +394,7 @@ body {
       border-radius: 0;
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
-      z-index: 20; }
+      z-index: 200; }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
 
@@ -379,6 +406,9 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform .3s; }
+  @media (max-width: 56.25em) {
+    .feature-box {
+      padding: 2rem; } }
   .feature-box__icon {
     font-size: 6rem;
     margin-bottom: .5rem;
@@ -386,6 +416,9 @@ body {
     background-image: linear-gradient(to right, #7ed56f, #28b485);
     -webkit-background-clip: text;
     color: transparent; }
+    @media (max-width: 56.25em) {
+      .feature-box__icon {
+        margin-bottom: 0; } }
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
 
@@ -591,6 +624,9 @@ body {
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .footer__logo-box {
+        margin-bottom: 4rem; } }
   .footer__logo {
     width: 20rem;
     height: auto; }
@@ -636,8 +672,7 @@ body {
     margin-bottom: 8rem; }
     @media (max-width: 56.25em) {
       .row:not(:last-child) {
-        margin-bottom: 6rem;
-        margin-right: rem; } }
+        margin-bottom: 6rem; } }
   @media (max-width: 56.25em) {
     .row {
       max-width: 50rem;
@@ -678,14 +713,19 @@ body {
   position: relative;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 60% 90%, 40% 90%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 100%, 60% 90%, 40% 90%, 0 100%); }
-  @media (max-width: 37.5em) {
+  @media (max-width: 56.25em) {
     .header {
+      height: 70vh;
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 60% 95%, 40% 95%, 0 100%);
       clip-path: polygon(0 0, 100% 0, 100% 100%, 60% 95%, 40% 95%, 0 100%); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
     left: 4rem; }
+    @media (max-width: 56.25em) {
+      .header__logo-box {
+        top: 4.5rem;
+        left: 4.5rem; } }
   .header__logo {
     height: 3.5rem; }
   .header__text-box {
@@ -815,6 +855,12 @@ body {
   background-color: #f7f7f7;
   padding: 10rem 0 30rem 0;
   margin-top: -10vh; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 16rem 0 20rem 0; } }
+  @media (max-width: 37.5em) {
+    .section-about {
+      padding: 20rem 0 20rem 0; } }
 
 .section-features {
   padding: 20rem 0;
@@ -824,19 +870,31 @@ body {
   margin-top: -10rem; }
   .section-features > * {
     transform: skewY(7deg); }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 10rem 0; } }
 
 .section-tours {
   background-color: #f7f7f7;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem; }
+  @media (max-width: 56.25em) {
+    .section-tours {
+      padding: 20rem 0 15rem 0; } }
 
 .section-stories {
   position: relative;
   padding: 15rem 0; }
+  @media (max-width: 56.25em) {
+    .section-stories {
+      padding: 10rem 0; } }
 
 .section-book {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+  @media (max-width: 56.25em) {
+    .section-book {
+      padding: 10rem 0; } }
 
 .book {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../image/book-photo1.jpg);
