--- a/assets/sass/components/_composition.scss
+++ b/assets/sass/components/_composition.scss
@@ -12,19 +12,44 @@
         transition: all .2s;
         outline-offset: 2rem;
 
+        @include respond(tab-port) {
+            float: left;
+            position: relative;
+            width: 33.33333%;
+            box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+        }
+
         &--p1 {
             left: 0;
             top: -4rem;
+
+            @include respond(tab-port) {
+                top: 0rem;
+                transform: scale(1.1);
+            }
         }
 
         &--p2 {
             left: 30%;
             top: 8rem;
+
+            @include respond(tab-port) {
+                top: -1rem;
+                left: 0;
+                transform: scale(1.3);
+                z-index: 100;
+            }
         }
 
         &--p3 {
             left: 60%;
-            top: 20rem; 
+            top: 20rem;
+            
+            @include respond(tab-port) {
+                top: 1rem;
+                left: 0;
+                transform: scale(1.2);
+            }
         }
 
             &:hover {
@@ -34,7 +59,7 @@
                 border-radius: 0;
                 transform: scale(1.05) translateY(-0.5rem);
                 box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
-                z-index: 20;
+                z-index: 200;
             }
     }
 
