--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -150,5 +150,73 @@
         font-weight: 100;
     }
 
+    // ============ Media query started ===========
 
+    @include respond(tab-port) {
+        height: auto;
+        border-radius: 3px;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+        &__side {
+            height: auto;
+            position: relative;
+            box-shadow: none;
+             
+            // &--front {
+            //     &::after {
+            //         position: absolute;
+            //         content: "";
+            //         background-color: $color-white;
+            //         bottom: -18%;
+            //         right: 0;
+            //         height: 20%;
+            //         width: 100%;
+            //         z-index: 2000;
+            //     }
+            // }
+             
+            &--back {
+                transform:rotateY(0);
+                -webkit-clip-path: polygon(0 0, 40% 10%,60% 10%,  100% 0, 100% 100%, 0 100%);
+                clip-path: polygon(0 0, 40% 10%,60% 10%,  100% 0, 100% 100%, 0 100%);
+
+                &-1 {
+                    background-image: linear-gradient(to right bottom, $color-orange-light, $color-orange-dark);
+                }
+                &-2 {
+                    background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+                }
+                &-3 {
+                    background-image: linear-gradient(to right bottom, $color-blue-light, $color-blue-dark);
+                }
+            }
+        }
+
+        &:hover &__side--front {
+            transform: rotateY(0);
+        }
+
+        &__details {
+            padding: 1rem 3rem 1rem;
+        }
+
+        // back side styling
+        &__cta {
+            position: relative;
+            top: 0;
+            left: 0;
+            transform: translate(0);
+            width: 100%;
+            padding: 7rem 4rem 4rem 4rem;
+        }
+
+        &__price-box {
+            margin-bottom: 3rem;
+        }
+
+        &__price-value {
+            font-size: 6rem;
+        }
+    }
 }
