--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -50,6 +50,11 @@
         width: 50%;
         display: inline-block;
         float: left;
+        
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 1rem;
+        }
     }
 
     &__radio-input {
