--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -8,7 +8,7 @@
     }
 
     @include respond(phone) {
-        padding: 20rem 0 20rem 0;
+        padding: 20rem 0 20 rem 0;
     }
 }
 
@@ -72,8 +72,34 @@
 
     // height: 50rem;
 
+    @include respond(tab-land) {
+        background-image: linear-gradient(105deg, 
+                    rgba($color-white, .9) 0%,
+                    rgba($color-white, .9) 65%,
+                    transparent 70%) ,
+                    url(../image/book-photo1.jpg);
+        background-size: cover;
+    }
+
+    @include respond(tab-port) {
+        background-image: linear-gradient(to right, 
+                    rgba($color-white, .9) 0%,
+                    rgba($color-white, .9) 100%),
+                    url(../image/book-photo1.jpg);
+    }
+
     &__form {
         width: 50%;
-        padding: 6rem;
+        padding: 6rem; 
+
+        @include respond(tab-land) {
+            width: 65%;
+            width: 4rem;
+
+        }
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
 }
